# AutoAim

./: .gitignore  Cargo.toml  README.md  agent.md  pyproject.toml
.github/workflows/: windows-release.yml
contracts/: ipc.md
crates/: README.md
crates/autoaim-app/: Cargo.toml  build.rs  tauri.conf.json
crates/autoaim-app/src/: main.rs
crates/autoaim-app/ui/: index.html  main.js  overlay.html  overlay.js  styles.css
crates/autoaim-capture/: Cargo.toml
crates/autoaim-capture/src/: lib.rs
crates/autoaim-cli/: Cargo.toml
crates/autoaim-cli/src/: main.rs
crates/autoaim-core/: Cargo.toml
crates/autoaim-core/src/: lib.rs
crates/autoaim-infer/: Cargo.toml
crates/autoaim-infer/src/: lib.rs
crates/autoaim-infer/tests/: movenet_e2e.rs
crates/autoaim-ipc/: Cargo.toml
crates/autoaim-ipc/src/: lib.rs
crates/autoaim-runtime/: Cargo.toml
crates/autoaim-runtime/src/: lib.rs
docs/: README.md  architecture.md  architecture.zh.md
examples/: sample_frames.jsonl
models/: README.md
schemas/: frame_record.schema.json
scripts/: build_windows_package.py  prepare_models.py  verify_delta_update.py
src/autoaim_review/: __init__.py  cli.py  dataset.py  evaluation.py  exporters.py  models.py  scoring.py  splitting.py  validation.py
tests/: e2e_smoke.py  rust_cli_e2e.py  test_scoring.py
windows/: AutoAimReview.cmd  AutoAimReview.ps1  README.md  install.ps1  update.ps1
windows/installer/: AutoAimReview.iss
