[package]
name = "autoaim-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop UI for AutoAim Review."

[[bin]]
name = "AutoAimReview"
path = "src/main.rs"

[dependencies]
autoaim-capture = { path = "../autoaim-capture" }
autoaim-core = { path = "../autoaim-core" }
autoaim-infer = { path = "../autoaim-infer" }
autoaim-ipc = { path = "../autoaim-ipc" }
autoaim-runtime = { path = "../autoaim-runtime" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-build.workspace = true

[features]
default = ["directml", "cuda", "tensorrt"]
directml = ["autoaim-infer/directml"]
cuda = ["autoaim-infer/cuda"]
tensorrt = ["autoaim-infer/tensorrt"]
