[package]
name = "autoaim-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Windows screen and cursor capture for AutoAim Review."

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
serde.workspace = true

[target.'cfg(windows)'.dependencies]
scrap = "0.5"
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
