[package]
name = "autoaim-infer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Person inference adapters for AutoAim Review captured frames."

[lib]
path = "src/lib.rs"

[dependencies]
autoaim-capture = { path = "../autoaim-capture" }
autoaim-core = { path = "../autoaim-core" }
serde.workspace = true
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
    "cuda",
    "directml",
    "tensorrt",
    "tls-native",
    "api-24",
], optional = true }
tract-onnx = { version = "0.23", optional = true }
tract-tflite = { version = "0.23", optional = true }

[features]
default = ["movenet"]
movenet = ["dep:tract-onnx", "dep:tract-tflite"]
ort-backend = ["movenet", "dep:ort"]
directml = ["ort-backend"]
cuda = ["ort-backend"]
tensorrt = ["ort-backend"]
