[package]
name = "autoaim-ipc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IPC message schemas for AutoAim Review."

[lib]
path = "src/lib.rs"

[dependencies]
autoaim-core = { path = "../autoaim-core" }
serde.workspace = true
serde_json.workspace = true
