[package]
name = "autoaim-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime pipeline primitives for AutoAim Review."

[lib]
path = "src/lib.rs"

[dependencies]
autoaim-core = { path = "../autoaim-core" }
autoaim-ipc = { path = "../autoaim-ipc" }
serde.workspace = true
serde_json.workspace = true
